quorum/test/tests/TypeChecker/Pass/ImpAssignIntegerIntegerWrapped.quorum
class Main
    action Main
        integer x = 5
        integer i = x
        print x
        print i
    end
end