quorum/test/tests/TypeChecker/Fail/ImpAssignBoolObjIntegerWrapped.quorum
class main
    action main
        integer i = 5
        Boolean b = i
    end
end